# django-crud-views

./: .gitignore  .pre-commit-config.yaml  .python-version  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  noxfile.py  package-lock.json  package.json  pyproject.toml  settings_i18n.py  taskfile.yaml  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  github-actions-demo.yml  js.yml  lint.yml  pipeline.yml  publish.yml  readme-examples.yml  run-tests.yml  tests.yml
.run/: django-crud-views-runserver.run.xml  django-crud-views.run.xml  runserver-bootstrap5.run.xml  runserver.run.xml  test.run.xml
crud_views/: apps.py  checks.py
crud_views/lib/: check.py  exceptions.py  session.py  settings.py
crud_views/templatetags/: crud_views.py  crud_views_formsets.py  viewset.py
crud_views_guardian/: apps.py
crud_views_guardian/lib/: mixins.py  views.py  viewset.py
crud_views_plain/: apps.py
crud_views_polymorphic/: apps.py
crud_views_polymorphic/lib/: __init__.py  create.py  create_select.py  delete.py  detail.py
crud_views_workflow/: apps.py  forms.py  mixins.py  models.py  views.py
crud_views_workflow/lib/: enums.py  forms.py  mixins.py  views.py
crud_views_workflow/migrations/: 0001_initial.py  0002_rename_workflow_object_id_to_pk.py
docs/: .pages  faq.md  index.md
docs/development/: i18n.md  index.md  stability.md
docs/getting_started/: .pages  example.md  index.md  tutorial-1-setup.md  tutorial-2-list.md  tutorial-3-forms.md  tutorial-4-detail.md  tutorial-5-filters-permissions.md  tutorial-6-books.md  tutorial.md  tutorial2.md
docs/reference/: .pages  action_enabled.md  action_view.md  assets.md  breadcrumb.md  card-list-view.md  conditional.md  context_buttons.md  create_view.md  custom_form_view.md  delete_view.md  detail_custom_view.md  detail_view.md  formsets.md  guardian.md  index.md  list_view.md  modals.md  nested.md  object_detail_badges.md  object_detail_configuration.md  object_detail_layout_packs.md  object_detail_links.md  object_detail_settings.md  object_detail_view.md  ordered_view.md  polymorphic_view.md  resources.md  settings.md  templates.md  theme.md  update_view.md  workflow_view.md
docs/tbd/: overview.md
examples/bootstrap5/: pytest.ini  taskfile.yaml  test_docs_sync.py  test_i18n.py
examples/shared/: models.py  taskfile.yaml
instructions/: polymorhpic.md  swap_plain_and_bootstrap.md  use-django-object-detail.md  viewset_pk_auto_discovery.md
requirements/: requirements-boostrap5.txt  requirements-minimal-bootstrap5.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  test.txt
scripts/: generate_mockups.py  generate_screenshots.py  wait_for_server.py
skills/django-crud-views/: SKILL.md
src/crud_views/: checks.py
src/crud_views_object_detail/: apps.py
src/crud_views_plain/: apps.py
src/crud_views_workflow/: apps.py  checks.py  models.py
superpowers/instructions/: 0001-improve-delete.md  0002-filter-improvements.md  0003-context-button-create-access.md  0004-context-button-access-create-TODO.md  0004-context-button-parent-object-access.md  0005-context-button-parent-label.md
superpowers/notes/: 2026-07-16-release-1-milestone.md
superpowers/plans/: 2026-04-24-guardian-integration.md  2026-04-27-guardian-permission-list-fix.md  2026-04-28-guardian-anonymous-behavior.md  2026-05-07-guardian-child-create-button-visibility.md  2026-05-13-improve-delete.md  2026-05-15-list-card-key-fallback.md  2026-05-18-csp-compatibility.md  2026-06-08-optional-ordered-dependency.md  2026-06-08-src-layout-migration.md  2026-06-16-cardview-order-filter-paging.md  2026-06-17-context-button-templating.md  2026-06-17-filter-pinned.md  2026-06-17-readme-improvement.md  2026-06-17-sibling-context-button.md  2026-06-18-action-view-messages.md  2026-06-18-context-button-create-access.md  2026-06-18-context-button-is-active.md  2026-06-18-context-button-parent-object-access.md  2026-06-18-formsets-ergonomics.md  2026-06-18-viewset-extends-override.md  2026-06-24-context-action-unregistered-key.md  2026-06-24-example-view-level-context-button.md  2026-06-24-view-level-context-buttons.md  2026-06-25-hardening-cleanup-v0.10.1.md  2026-06-26-conditional-field-groups.md  2026-06-26-formsets-parent-required.md  2026-06-26-formsets-validation-gate-hardening.md  2026-06-28-toggle-group-legend-fieldset.md  2026-07-14-asset-registry.md  2026-07-14-bootstrap-modals.md  2026-07-14-extensions-datetimepicker.md  2026-07-15-resource-viewsets.md  2026-07-16-m1-remove-plain-theme.md  2026-07-16-m2-api-stability.md  2026-07-16-m3-examples.md  2026-07-17-card-action-post-parity.md  2026-07-17-example-about-prose.md  2026-07-17-expand-system-checks.md  2026-07-17-github-community-standards.md  2026-07-17-object-detail-integration.md  (+8 more)
superpowers/prompts/: 2026-07-14-bootstrap-modals.md  2026-07-17-object-detail-per-view.md  2027-07-15-brainstorm-model-less-viewsets.md  2027-07-16-release-1-milestone.md  2027-07-17-object-detail-per-view.md  2027-07-19-integrate-breadcrumb-from-other-project.md  2027-07-19-integrate-conditional-fields-groups.md
superpowers/specs/: 2026-04-27-guardian-permission-list-fix.md  2026-04-28-guardian-anonymous-behavior.md  2026-04-28-guardian-manage-view.md  2026-04-28-manage-view-class-customization-design.md  2026-05-07-guardian-child-create-button-visibility-design.md  2026-05-15-card-container-class-design.md  2026-06-16-cardview-order-filter-paging-design.md  2026-06-17-context-button-templating-design.md  2026-06-17-filter-pinned-design.md  2026-06-17-readme-improvement-design.md  2026-06-17-sibling-context-button-design.md  2026-06-18-action-view-messages-design.md  2026-06-18-context-button-create-access-design.md  2026-06-18-context-button-is-active-design.md  2026-06-18-context-button-parent-object-access-design.md  2026-06-18-formsets-ergonomics-design.md  2026-06-18-viewset-extends-override-design.md  (+32 more)
tests/js/: formset.test.js  (+3 more)
(+623 files in other folders)
