[project]
name = "django-crud-views"
version = "0.2.1"
description = "Django Crud Views"
authors = [
    { name = "Alexander Jacob", email = "alexander.jacob@jacob-consulting.de" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "django (>=4.2.0,<6)",
    "pydantic (>=2.2.1)",
    "python-box (>=6.0.2)",
    "django-tables2 (>=2.5.3)",
    "django-filter (>=21.1)",
    "typing-extensions (>=4.7.1)",
    "django-ordered-model (>=3.4.3)",
    "django-object-detail (>=0.1.7)",
    "django-bootstrap5 (>=21.3)",
    "django-crispy-forms (>=2.0)",
    "crispy-bootstrap5 (>=2023.10)",
]

[project.optional-dependencies]

workflow = [
    "django-fsm-2>=4.0.0",
    "django-fsm-2-admin>=2.0.1",
]

polymorphic = [
    "django-polymorphic (>=3.1.0)",
]

all = [
    "django-crud-views[workflow,polymorphic]"
]

dev = [
    "black",
    "bump-my-version",
    "mkdocs (>=1.6.1)",
    "mkdocs-awesome-pages-plugin (>=2.10.1)",
    "mkdocs-get-deps (>=0.2.0)"
]

test = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-random-order",
    "pytest-mock",
    "pytest-django",
    "pytest-xdist",
    "lxml",
]

[project.urls]
Homepage = "https://github.com/jacob-consulting/django-crud-views"
Documentation = "https://django-crud-views.readthedocs.io/en/latest/"
Repository = "https://github.com:jacob-consulting/django-crud-views.git"
Issues = "https://github.com/jacob-consulting/django-crud-views/issues"
Changelog = "https://github.com/jacob-consulting/django-crud-views/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "crud_views",
    "crud_views_plain",
    "crud_views_workflow",
    "crud_views_polymorphic"
]

# todo: polymorphic-minimal

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["crud_views", "crud_views_plain", "crud_views_polymorphic", "crud_views_workflow"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.bumpversion]
current_version = "0.2.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "crud_views/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "crud_views_plain/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/index.md"
search = "Current version: {current_version}"
replace = "Current version: {new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "Current version: {current_version}"
replace = "Current version: {new_version}"
